Fix CSS syntax for .xmas class

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 .xmas
 {
-"border="dashed" border-color="Green" background-color="red"
+border="dashed" border-color="Green" background-color="red"
 }
