Fix CSS syntax for border and background properties

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .xmas
 {
-border: "dashed" border-color:"Green" background-color:"red"
+
 }
 main
 {
- 
+ border: dashed; border-color: Green; background-color: red;
 }
